# onion-core

./: .env.example  .git_commit_message.txt  .git_commit_message_v3.txt  .git_commit_message_v4.txt  .git_commit_message_v5.txt  .git_commit_msg.txt  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  generate_api_docs.py  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: conftest.py  test_middleware_latency.py  test_performance.py
benchmarks/scripts/: load_test.ps1
docs/: DOCUMENTATION_REFACTOR_SUMMARY.md  MKDOCS_GUIDE.md  api_reference.md  architecture.md  degradation_strategy.md  distributed_usage.md  error_code_usage.md  index.md  migration_guide.md  model_pricing_config.md  monitoring.md  monitoring_guide.md
docs/api/: agent.md  base.md  config.md  core.md  error_codes.md  health_server.md  infrastructure.md  manager.md  middlewares.md  models.md  observability.md  pipeline.md  provider.md  providers.md  (+1 more)
examples/: agent_loop.py  config_usage.py  distributed_middleware.py  domestic_ai.py  fastapi_governance.py  litellm_governance.py  lm_studio_example.py  local_ai.py  sync_api_example.py  tenant_budget.py
monitoring/: alertmanager_rules.yml  grafana_dashboard.json
onion_core/: __init__.py  _validation.py  agent.py  base.py  circuit_breaker.py  config.py  error_codes.py  health_server.py  manager.py  models.py  pipeline.py  provider.py  tools.py
src/: MIGRATION.md  __init__.py
tests/: conftest.py  test_agent.py  test_agent_advanced.py  test_agent_runtime.py  test_base.py  test_budget.py  test_cache.py  test_circuit_breaker.py  test_concurrent.py  test_config.py  test_distributed_middleware.py  test_e2e_agent.py  test_error_codes.py  test_executor.py  test_fault_injection.py  test_health_check.py  test_health_server.py  test_integration.py  test_load.py  test_middlewares.py  test_middlewares_advanced.py  test_models.py  test_phase56.py  test_pii.py  test_pipeline.py  test_pipeline_advanced.py  test_pipeline_extra.py  test_pipeline_sync.py  test_providers_anthropic.py  test_providers_anthropic_advanced.py  test_providers_domestic.py  test_providers_init.py  test_providers_local.py  test_providers_openai.py  test_providers_openai_advanced.py  test_redis_integration.py  test_state_compression.py  test_tools_idempotency.py  test_tracing.py
(+103 files in other folders)
